<resources>
    <string name="app_name">HelpTheHomeless</string>
    <string name="menu_stats">Poverty Stats</string>
    <string name="menu_list">Home</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Help The Homeless</string>
    <string name="nav_header_subtitle">htheh.app</string>
    <string name="welcome_to_help_the_homeless">Welcome to Help the Homeless</string>
    <string name="to_login">Press to login</string>
    <string name="google_maps_key">AIzaSyBGJvJ1gVDVbZ9DyUiJJhsXiBIp6H3lYcw</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTRATION</string>
    <string name="register_button">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeless_firstName">First Name</string>
    <string name="hl_email">Email address</string>
    <string name="profile_fragment">Profile</string>
    <string name="add_homeless">Add Homeless Profile</string>
    <string name="all_profiles">All</string>
    <string name="weeks_profiles">Week</string>
    <string name="todays_profiles">Today</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="select_location">Select Location</string>
    <string name="require_backgound_permission">This app requires background location permission, please go to settings and choose the \"allow all the times\" option</string>
    <string name="require_permission">"Please go to the location permissions settings and choose \"allow all the times\" "</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="upload_homeless_photo">Upload Homeless Photo</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="geofences_added">geofence added</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="gep_permission_denied_explanation">Please grant background permissions to save geofence</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="next">Continue</string>
    <string name="about_text">Help the Homeless is an app that informs users about the homeless living around their current location in case they feel charitable and want to make someone’s day. It is yet another tool in our fight against poverty. The app will rely on users to enter the information of the homeless in their area, or even better, if the homeless individual has a smartphone they can join themself. With this information other app users will know about the homeless person and either help them financially or even better hire them based on their education and work experience. The App will serve as the LinkedIn for the homeless.</string>
    <string name="disclaimer_description_2">The purpose of this app is to make it easier for homeless individuals to be helped or find work. If you decide to use this app, you are acknowledging that hth is not responsible for any misuse of this app. All parties, whether helpers or those in need of housing, are fully responsible and will be held accountable for any unlawful use of the services this app offers.</string>
    <string name="disclaimer_description_1">If you are a helper, please obtain the homeless individual\'s permission before creating a profile for them.</string>

    <string-array name="education_level_array">
        <item>Elementary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Some College</item>
        <item>Bachelor\'s</item>
        <item>Master\'s</item>
        <item>PhD</item>
    </string-array>

    <string-array name="experience_in_years">
        <item>Below 2 years</item>
        <item>2 to 5 years</item>
        <item>5 to 10 years</item>
        <item>More than 10 years</item>
    </string-array>
    <string name="title_activity_ed_details">EdDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_epx_details">Experience Details</string>

</resources>