<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.htheh.helpthehomeless.ui.homelesslist.HomelessListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_homeless_list">

        <action
            android:id="@+id/action_showProfile"
            app:destination="@+id/homelessProfileFragment" />

        <action
            android:id="@+id/action_toDisclaimer"
            app:destination="@+id/disclaimer" />

    </fragment>

    <fragment
        android:id="@+id/disclaimer"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.disclaimer.DisclaimerFragment"
        android:label="Disclaimer"
        tools:layout="@layout/fragment_disclaimer">

        <action
            android:id="@+id/action_addHomeless"
            app:destination="@+id/addHomelessFragment" />

    </fragment>

    <fragment
        android:id="@+id/addHomelessFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.AddHomelessFragment"
        android:label="@string/add_homeless"
        tools:layout="@layout/fragment_add_homeless">

        <action
            android:id="@+id/action_toShortBio"
            app:destination="@+id/shortBioFragment" />

    </fragment>

    <fragment
        android:id="@+id/shortBioFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.shortbio.BioFragment"
        android:label="Short Bio"
        tools:layout="@layout/fragment_bio">

        <action
            android:id="@+id/action_toEducation"
            app:destination="@+id/educationFragment"/>

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/educationFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.education.EducationFragment"
        android:label="Education"
        tools:layout="@layout/fragment_bio">

        <action
            android:id="@+id/action_toExperience"
            app:destination="@+id/experienceFragment"/>

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/experienceFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.experience.ExperienceFragment"
        android:label="Experience"
        tools:layout="@layout/fragment_bio">

        <action
            android:id="@+id/action_selectLocation"
            app:destination="@+id/selectLocationFragment"/>

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/selectLocationFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.selectlocation.SelectHomelessLocationFragment"
        android:label="@string/select_location"
        tools:layout="@layout/fragment_select_homeless_location">

        <action
            android:id="@+id/action_uploadPhoto"
            app:destination="@+id/uploadPhotoFragment"/>

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/uploadPhotoFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.savephoto.UploadHomelessPhotoFragment"
        android:label="@string/upload_homeless_photo"
        tools:layout="@layout/fragment_upload_homeless_photo">

        <action
            android:id="@+id/action_toReviewSave"
            app:destination="@+id/reviewSaveFragment"/>

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/reviewSaveFragment"
        android:name="app.htheh.helpthehomeless.ui.addhomeless.ReviewAndSaveProfileFragment"
        android:label="Review and Save Homeless Profile"
        tools:layout="@layout/fragment_review_and_save_profile">

        <action
            android:id="@+id/action_toHomelessList"
            app:destination="@+id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <argument
            android:name="homeless"
            app:argType="app.htheh.helpthehomeless.model.Homeless"/>

    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="app.htheh.helpthehomeless.ui.about.AboutFragment"
        android:label="About This App"
        tools:layout="@layout/fragment_about">

    </fragment>

</navigation>